# gh_demo

./: .coveragerc  .gitignore  404.html  CMakeLists.txt  LICENSE  README.md  index.html  package-lock.json  pyproject.toml  pytest-coverage.txt  pytest.xml  setup.cfg  setup.py  tests_result.txt  towncrier.toml  towncrier_01.toml  tox.ini  unit.xml
.github/: issue-branch.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: documentation-issue-template.md  documentation-template.md  documentation.md  maintenance-template.md  maintenance.md
.github/actions/: build.yml
.github/scripts/: extract_sdist_info.sh  extract_wheel_info.sh
.github/workflows/: build.yml  ci.yml  cibw_ci  cibw_ci.yml  comment.yml  example.yml  gh_ci.yml  issue-branch-PR.yml  issues.yml  link-check-all.yml  os.yml  pr.yml  publish-to-test-pypi  publish-to-test-pypi.yml  release-drafter.yml  release-publisher.yml  test.yml  tox.yml  wheels.yml
changelog/: index.html
changes/: AB.author  AD.author  PR25.dev  _changes_template.md.j2  _template.rst
docs/: beijing_math.md  changelog.md  changelog.rst  contributing.rst  index.md
script/: rendered-content-link-checker.mjs
scripts/: build.sh  install.sh
search/: search_index.json
src/: animal.hpp  main.cpp  matrix.hpp  num.hpp  pet.hpp  vec.hpp
src/example_package/: __init__.py  example.py
src/python/fseg/: __init__.py  animal.py
tests/: test_animal.py  test_basic.py  test_example.py
