[metadata]
# name = test_fseg
name = fseg
version = 0.1.0
author = Dean Moldovan
author_email = dean0x7d@gmail.com
description = A test project using pybind11 and CMake
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mikesongming/gh_demo
project_urls =
    Bug Tracker = https://github.com/mikesongming/gh_demo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
python_requires = >=3.6
# package_dir =
#     = src
# packages = find:

# [options.packages.find]
# where = src
